adaugare alte rute in swagger
